--- a/css/styles.css
+++ b/css/styles.css
@@ -133,11 +133,11 @@ input {
     max-width: 620px;
     width: 100%;
  }
-/* width */
-.w-26 {
-    width: 26px !important;
-}
-.w-32 {
+ /* width */
+ .w-26 {
+     width: 26px !important;
+    }
+    .w-32 {
     width: 32px !important;
 }
 .w-35 {
@@ -171,6 +171,9 @@ input {
 }
 .w-190 {
     width: 190px !important;
+}
+.w-797{
+   width: 797px;
 }
 /* height */
 .h-5 {
@@ -224,6 +227,9 @@ input {
 }
 .shadow-2{
     box-shadow: 0px 0px 30px 0px #0000001F;
+}
+.shadow-3{
+    box-shadow: 0px 0px 30px 0px #00000026;
 }
 /* rotate */
 .-rotate-180 {
@@ -314,6 +320,9 @@ input {
 }
 .-top-2 {
     top: -2px;
+}
+.-top-9 {
+    top: -9px;
 }
 .-top-18 {
     top: -18px;
@@ -497,6 +506,18 @@ input {
 }
 #priceList .swiper-slide:hover path{
     fill: #0B49DC;
+}
+/* menu */
+.dropdownBtn:hover .dropdownMenu{
+    opacity: 100%;
+    visibility: visible;
+    top: 20px;
+}
+.dropdownMenu{
+    opacity: 0;
+    visibility: hidden;
+    transition: all .4s;
+    top: 50px;
 }
 /* steps */
 #steps{
