--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,10 @@ a {
     text-decoration: none !important;
     cursor: pointer;
 }
-
+.row{
+    margin-left: 0;
+    margin-right: 0;
+}
 input {
     background-color: transparent;
 }
@@ -811,5 +814,11 @@ header ul .dropdownMenu a:hover svg path{
     }
     .text-smm-center{
         text-align: center!important;
+    }
+    .right-sm-11{
+        right: -11px;
+    }
+    .left-sm-11{
+        left: -11px;
     }
 }
