--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,9 @@ input {
 .bg-input{
     background-color: #F8F8F8;
 }
+.bg-brown{
+    background-color: #F8DDB7;
+}
 /* text color */
 .text-main {
     color: #293268;
@@ -77,6 +80,9 @@ input {
 }
 .text-dark2{
     color: black;
+}
+.text-gray{
+    color: #363636;
 }
 /* cursor */
 .cursor {
@@ -104,6 +110,9 @@ input {
 /* margin */
 .m-18{
     margin: 18px;
+}
+.-mt-100 {
+    margin-top: -100px;
 }
 .-mt-255 {
     margin-top: -255px;
@@ -157,6 +166,10 @@ input {
  }
  .max-w-620{
     max-width: 620px;
+    width: 100%;
+ }
+ .max-w-950{
+    max-width: 950px;
     width: 100%;
  }
  .max-w-979{
@@ -214,10 +227,16 @@ input {
 .w-190 {
     width: 190px !important;
 }
+.w-250 {
+    width: 250px !important;
+}
 .w-797{
    width: 797px;
 }
 /* height */
+.h-2 {
+    height: 2px;
+}
 .h-5 {
     height: 5px;
 }
@@ -269,6 +288,9 @@ input {
 .h-213 {
     height: 213px;
 }
+.h-230 {
+    height: 230px;
+}
 .h-385 {
     height: 385px;
 }
@@ -303,6 +325,9 @@ input {
 }
 .shadow-7{
     box-shadow: 0px 4.57px 10px -2.14px #00000014;
+}
+.shadow-8{
+    box-shadow: 2px 10px 28px 0px #3C6DE326;
 }
 /* rotate */
 .rotate-90 {
