--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,9 @@ input {
 .fs-14 {
     font-size: 14px;
 }
-
+.fs-16 {
+    font-size: 16px;
+}
 .fs-18 {
     font-size: 18px;
 }
@@ -658,6 +660,10 @@ input {
     fill: #131944;
 }
 /* global styles */
+.line{
+    height: 1px;
+    background-color: #E5E7EF;
+}
 .cursor {
     cursor: pointer;
 }
